--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
         <form class="input-block">
             <h6>Note:</h6>
             <input id="task-input" type="text">
-            <!-- <p id="error-paragraph" class="error-paragraph">Please, write your task</p> -->
-            <button type="submit" id="enter-btn" class="enter-btn">Enter</button>
+            <button type="submit" id="enter-btn" class="enter-btn">Add task</button>
         </form>
 
         <div id="taskList" class="task-list">
-            <ul id="list" class="list" role="listbox"></ul>
+            <ul id="list" class="list" role="listbox">
+                <!-- TASKS -->
+            </ul>
         </div>     
     </main>
+   
 
     <script src="script.js"></script>
 </body>
