--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <div class="heading">
-            <h1 class="headong__name">Tasks</h1>
+            <h1 class="heading__name">Tasks</h1>
             <button class="heading__clear-btn" id="heading__clear-btn"><img src="images/rocket.png" alt="image of rocket"></button>
         </div>
 
