--- a/index.html
+++ b/index.html
@@ -20,11 +20,15 @@
             <button type="submit" id="enter-btn" class="enter-btn">Add task</button>
         </form>
 
-        <div id="taskList" class="task-list">
+        <div class="task-list">
+            <div id="empty-task-list" class="empty-task-list">
+                Here will be shown your tasks
+            </div>
             <ul id="list" class="list" role="listbox">
                 <!-- TASKS -->
             </ul>
-        </div>     
+        </div>   
+        
     </main>
    
 
